# GH-DesktopToCN

./: .gitignore  CHANGELOG.md  CMAKE编译指南.md  CMakeLists.txt  CMakePresets.json  LICENSE  MainWindow.cpp  MainWindow.h  README.md  VS2026自定义外部工具指南.md  localization.md  release_template.evb  version.json  注意事项.txt  项目构建与发布操作指南.md
.fetched/cli11_proj-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CLI11.slnx
.fetched/cli11_proj-build/src/: CLI11.vcxproj  CLI11.vcxproj.filters
.fetched/cli11_proj-build/src/x64/Debug/CLI11/: CLI11.recipe
.fetched/cli11_proj-build/src/x64/Debug/CLI11/CLI11.tlog/: CLI11.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Utils/: utils.hpp
prebuilt/: localization.json
prebuilt/3.5.8/: main.js  renderer.js
